--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npm run editorconfig",
     "build:prod": "rimraf ./dist && webpack --mode production --config webpack.config.js",
     "build:dev": "rimraf ./dist && webpack --mode development --config webpack.config.js",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -29,6 +30,7 @@
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.6.0",
